// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawSymbol should match snapshot, animate false 1`] = `
<MdRemove
  className="draw"
/>
`;

exports[`DrawSymbol should match snapshot, animate true 1`] = `
<MdRemove
  className="draw animateDraw"
/>
`;
